Fixed touch event issue on mobile devices.

--- a/scrollkit.css
+++ b/scrollkit.css
@@ -50,6 +50,13 @@ html, body {
   transform: translate(0, 0);
 }
 
+.sk-scroll-view.sk-scroll-view-plain, .sk-scroll-view.sk-scroll-view-plain > .sk-scroll-content {
+  background: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
 .sk-scroll-bar {
   background: rgba(0, 0, 0, 0.5);
   position: absolute;
